2003-05-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinSerial.c (SerialCloseProc): correct mem leak on
	closing a Windows serial port [Bug #718002] (schroedter)

	* generic/tclCmdMZ.c (Tcl_StringObjCmd): prevent string repeat
	crash when overflow sizes were given (throws error). [Bug #714106]

2003-05-09  Joe Mistachkin <joe@mistachkin.com>

	* generic/tclThreadAlloc.c (TclFreeAllocCache): Fixed memory leak
        caused by treating cachePtr as a TLS index [Bug 731754].

	* win/tclAppInit.c (Tcl_AppInit): Fixed memory leaks caused by not
        freeing the memory allocated by setargv and the async handler created
        by Tcl_AppInit. An exit handler has been created that takes care of
        both leaks. In addition, Tcl_AppInit now uses ckalloc instead of
        Tcl_Alloc to allow for easier leak tracking and to be more consistent
        with the rest of the Tcl core [Bugs 733156, 733221].

	* tools/encoding/txt2enc.c (main): Fixed memory leak caused by failing
        to free the memory used by the toUnicode array of strings [Bug 733221].

2003-05-09  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c (TclCompileScript):
	* tests/compile.test (compile-3.5): corrected wrong test and
	behaviour in the earlier fix for [Bug 705406]; Don Porter reported
	this as [Bug 735055], and provided the solution.

2003-05-09  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdMZ.c (Tcl_ReturnObjCmd): The array of strings
	passed to Tcl_GetIndexFromObj must be NULL terminated.  [Bug 735186]
	Thanks to Joe Mistachkin for spotting this.

2003-05-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/trace.n: Fixed very strange language in the documentation
	for 'trace add execution'.  [Bug 729821]

	* generic/tclCmdMZ.c (Tcl_TraceObjCmd): Made error message for
	'trace info' more consistent with documentation.  [Bug 706961]

	* generic/tclDictObj.c (DictInfoCmd): Fixed memory leak caused by
	confusion about string ownership.  [Bug 731706]
